--- a/text/00_TOC.adoc
+++ b/text/00_TOC.adoc
@@ -1,67 +1,67 @@
-使用 GNU 工具链进行嵌入式编程
+= 使用 GNU 工具链进行嵌入式编程
 Vijay Kumar B.
 <vijaykumar@bravegnu.org>
 版本历史
 
 目录
 
-# 介绍
+= 介绍
 
-# 设置 ARM 实验环境
+= 设置 ARM 实验环境
 
 2.1. Qemu ARM
 2.2. Installing Qemu in Debian
 2.3. Installing GNU Toolchain for ARM
 
-# 你好 ARM
+= 你好 ARM
 
 3.1. Building the Binary
 3.2. Executing in Qemu
 3.3. More Monitor Commands
 
-# 更多汇编指令
+= 更多汇编指令
 
 4.1. Sum an Array
 4.2. String Length
 
-# 使用 RAM
+= 使用 RAM
 
-# 链接器
+= 链接器
 
 6.1. Symbol Resolution
 6.2. Relocation
 
-# 链接脚本
+= 链接脚本
 
 7.1. Linker Script Example
 
-# RAM 中的数据，例子
+= RAM 中的数据，例子
 
 8.1. RAM is Volatile!
 8.2. Specifying Load Address
 8.3. Copying .data to RAM
 
-# 异常处理
+= 异常处理
 
-# 启动 C
+= 启动 C
 
     10.1. Stack
     10.2. Global Variables
     10.3. Read-only Data
     10.4. Startup Code
 
-# 使用 C 库
+= 使用 C 库
 
-# 内联汇编
+= 内联汇编
 
-# 贡献
+= 贡献
 
-# 名单
+= 名单
 
     14.1. People
     14.2. Tools
 
-# 指南版权
+= 指南版权
 
     A. ARM Programmer’s Model
     B. ARM Instruction Set
